--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,35 +1,49 @@
-<div class="row pt-5">
+<div class="container">
+  <div class="row pt-5">
     <div class="col-md-6 mx-auto">
-        <div class="card rounded-0">
-            <div class="card-header">
-                <h3 class="mb-0">Forgot Password</h3>
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Forgot Password</h3>
+        </div>
+        <div class="card-body">
+          <form #f="ngForm" (ngSubmit)="forgotPassword(f.value)" class="form">
+            <div class="form-group">
+              <label for="emailInput">Email</label>
+              <input
+                ngModel
+                id="emailInput"
+                name="email"
+                #email="ngModel"
+                type="email"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                class="form-control rounded-0"
+                required
+              />
+              <div
+                *ngIf="email.touched && email.invalid"
+                class="alert alert-danger"
+              >
+                <div *ngIf="email.errors?.required">Email is required.</div>
+                <div *ngIf="email.errors?.pattern">
+                  This is not a valid Email!!!
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-                <form #f="ngForm" (ngSubmit)="forgotPassword(f.value)" class="form">
-                    <div class="form-group">
-                        <label for="emailInput">Email</label>
-                        <input ngModel id="emailInput" name="email" #email="ngModel" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control rounded-0" required />
-                        <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-                            <div *ngIf="email.errors?.required">Email is required.</div>
-                            <div *ngIf="email.errors?.pattern">
-                                This is not a valid Email!!!
-                            </div>
-                        </div>
-                    </div>
-                    <h5 class="mt-3">
-                        A password reset link will be sent to your email.
-                    </h5>
-                    <button class="btn btn-primary float-right" [disabled]="f.invalid">
-            Send Link
-          </button>
-                </form>
-            </div>
+            <h5 class="mt-3">
+              A password reset link will be sent to your email.
+            </h5>
+            <button class="btn btn-primary float-right" [disabled]="f.invalid">
+              Send Link
+            </button>
+          </form>
         </div>
-        <div *ngIf="successMessage" class="alert alert-success mt-3">
-            {{ successMessage }}
-        </div>
-        <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-            {{ errorMessage }}
-        </div>
+      </div>
+      <div *ngIf="successMessage" class="alert alert-success mt-3">
+        {{ successMessage }}
+      </div>
+      <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+        {{ errorMessage }}
+      </div>
     </div>
+  </div>
 </div>
