--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,68 +1,72 @@
-<div class="row pt-5">
-  <div class="col-md-6 mx-auto">
-    <div class="card rounded-0">
-      <div class="card-header">
-        <h3 class="mb-0">Login</h3>
-      </div>
-      <div class="card-body">
-        <form #f="ngForm" (ngSubmit)="loginUser(f.value)" class="form">
-          <div class="form-group">
-            <label for="emailInput">Email</label>
-            <input
-              ngModel
-              id="emailInput"
-              name="email"
-              #email="ngModel"
-              type="email"
-              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-              class="form-control rounded-0"
-              required
-            />
-            <div
-              *ngIf="email.touched && email.invalid"
-              class="alert alert-danger"
-            >
-              <div *ngIf="email.errors?.required">Email is required.</div>
-              <div *ngIf="email.errors?.pattern">
-                This is not a valid Email!!!
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-md-6 mx-auto">
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Login</h3>
+        </div>
+        <div class="card-body">
+          <form #f="ngForm" (ngSubmit)="loginUser(f.value)" class="form">
+            <div class="form-group">
+              <label for="emailInput">Email</label>
+              <input
+                ngModel
+                id="emailInput"
+                name="email"
+                #email="ngModel"
+                type="email"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                class="form-control rounded-0"
+                required
+              />
+              <div
+                *ngIf="email.touched && email.invalid"
+                class="alert alert-danger"
+              >
+                <div *ngIf="email.errors?.required">Email is required.</div>
+                <div *ngIf="email.errors?.pattern">
+                  This is not a valid Email!!!
+                </div>
               </div>
             </div>
-          </div>
-          <div class="form-group">
-            <label for="passwordInput">Password</label>
-            <input
-              ngModel
-              id="passwordInput"
-              minlength="6"
-              name="password"
-              #password="ngModel"
-              type="password"
-              class="form-control rounded-0"
-              required
-            />
-            <div
-              *ngIf="password.touched && password.invalid"
-              class="alert alert-danger"
-            >
-              <div *ngIf="password.errors?.required">Password is required.</div>
-              <div *ngIf="password.errors?.minlength">
-                Password should be at least
-                {{ password.errors?.minlength?.requiredLength }} characters.
+            <div class="form-group">
+              <label for="passwordInput">Password</label>
+              <input
+                ngModel
+                id="passwordInput"
+                minlength="6"
+                name="password"
+                #password="ngModel"
+                type="password"
+                class="form-control rounded-0"
+                required
+              />
+              <div
+                *ngIf="password.touched && password.invalid"
+                class="alert alert-danger"
+              >
+                <div *ngIf="password.errors?.required">
+                  Password is required.
+                </div>
+                <div *ngIf="password.errors?.minlength">
+                  Password should be at least
+                  {{ password.errors?.minlength?.requiredLength }} characters.
+                </div>
               </div>
             </div>
-          </div>
-          <a class="mt-10" routerLink="/auth/forgot-password"
-            >Forgot Password</a
-          >
-          <button class="btn btn-success float-right" [disabled]="f.invalid">
-            Login
-          </button>
-        </form>
+            <a class="mt-10" routerLink="/auth/forgot-password"
+              >Forgot Password</a
+            >
+            <button class="btn btn-success float-right" [disabled]="f.invalid">
+              Login
+            </button>
+          </form>
+        </div>
       </div>
+      <p class="text-center mt-3">Or</p>
+      <button class="google btn1" type="button" (click)="continueWithGoogle()">
+        Continue with Google
+      </button>
     </div>
-    <p class="text-center mt-3">Or</p>
-    <button class="google btn1" type="button" (click)="continueWithGoogle()">
-      Continue with Google
-    </button>
   </div>
 </div>
