--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,16 @@
-<div class="row pt-5">
+<div class="container">
+  <div class="row pt-5">
     <div class="col-md-6 mx-auto">
-        <div class="card rounded-0">
-            <div class="card-header">
-                <h3 class="mb-0">Home</h3>
-            </div>
-            <div class="card-body">
-                <p class="card-text">
-                    This is the home page of resume builder website.
-                </p>
-            </div>
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Home</h3>
         </div>
+        <div class="card-body">
+          <p class="card-text">
+            This is the home page of resume builder website.
+          </p>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
