--- a/src/app/users/sidebar/sidebar.component.html
+++ b/src/app/users/sidebar/sidebar.component.html
@@ -71,7 +71,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            U<span class="d-none d-sm-inline mx-1">ser</span>
+            U<span class="d-none d-sm-inline mx-1">ser Settings</span>
           </a>
           <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
             <li>
