--- a/src/app/users/sidebar/sidebar.component.html
+++ b/src/app/users/sidebar/sidebar.component.html
@@ -23,9 +23,7 @@
         >
           <li class="nav-item">
             <a routerLink="/users/profile" class="nav-link align-middle px-0">
-              U<span class="ms-1 d-none d-sm-inline left-space"
-                >ser Profile</span
-              >
+              U<span class="d-none d-sm-inline left-space">ser Profile</span>
             </a>
           </li>
 
@@ -35,7 +33,7 @@
               data-bs-toggle="collapse"
               class="nav-link px-0 align-middle"
             >
-              R<span class="ms-1 d-none d-sm-inline">esume Builder</span></a
+              R<span class="d-none d-sm-inline">esume Builder</span></a
             >
             <ul
               class="collapse nav flex-column ms-1"
@@ -69,7 +67,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            U<span class="d-none d-sm-inline mx-1">ser Settings</span>
+            U<span class="d-none d-sm-inline">ser Settings</span>
           </a>
           <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
             <li>
